@@ -23,8 +23,11 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: auth.c,v 1.60 2005/06/17 02:44:32 djm Exp $");
+RCSID("$OpenBSD: auth.c,v 1.61 2006/02/08 12:15:27 stevesk Exp $");
 
+#ifdef HAVE_PATHS_H
+#  include <paths.h>
+#endif
 #ifdef HAVE_LOGIN_H
 #include <login.h>
 #endif
