@@ -23,7 +23,11 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: readpass.c,v 1.33 2005/05/02 21:13:22 markus Exp $");
+RCSID("$OpenBSD: readpass.c,v 1.34 2006/02/08 12:15:27 stevesk Exp $");
+
+#ifdef HAVE_PATHS_H
+#  include <paths.h>
+#endif
 
 #include "xmalloc.h"
 #include "misc.h"
