@@ -35,8 +35,11 @@
 
 #include "includes.h"
 #include "openbsd-compat/sys-queue.h"
-RCSID("$OpenBSD: ssh-agent.c,v 1.125 2006/02/07 01:18:09 stevesk Exp $");
+RCSID("$OpenBSD: ssh-agent.c,v 1.126 2006/02/08 12:15:27 stevesk Exp $");
 
+#ifdef HAVE_PATHS_H
+#  include <paths.h>
+#endif
 #include <openssl/evp.h>
 #include <openssl/md5.h>
 
